Regression: new OBJ importer fails to load geometry using TAB character as delimiter #97417

Closed
opened 2022-04-18 04:37:45 +02:00 by Jesse Yurkovich · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-17 22:21, hash: bf80dc2bd4
Worked: (newest version of Blender that worked as expected)

Short description of error
I have an older set of Cornell box .OBJ models where 2 of the simpler ones fail to load (oddly enough). The existing python importer seems to handle them better.

Exact steps for others to reproduce the error
cbox.zip

  • Unpack the provided file above
    • Contains the .OBJs and a test.blend file
  • Open the provided blend and run the script in the editor
  • Observe that the 2 models referenced in the screenshot below show some degenerate/collapsed geometry
    • The 2 models are "CornellBox-Original.obj" and "CornellBox-Mirror.obj"
    • There's a few other models that are missing their right-side walls as well

Note: Consider using the filename for the imported object name instead of "New object" if no other name is provided.

obj-bad-geo.png

This caused by tabs as delimiters in some occasions.
For example CornellBox-Original.obj:
new importer chokes on:

## Object rightwall 
v	1.00  0.00  -1.04   
v	1.00  0.00   0.99
v	1.00  1.99   0.99
v	1.00  1.99  -1.04

this would read in fine

## Object rightwall 
v 1.00  0.00  -1.04   
v 1.00  0.00   0.99
v 1.00  1.99   0.99
v 1.
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-17 22:21, hash: `bf80dc2bd4` Worked: (newest version of Blender that worked as expected) **Short description of error** I have an older set of Cornell box .OBJ models where 2 of the simpler ones fail to load (oddly enough). The existing python importer seems to handle them better. **Exact steps for others to reproduce the error** [cbox.zip](https://archive.blender.org/developer/F13007213/cbox.zip) - Unpack the provided file above - Contains the .OBJs and a `test.blend` file - Open the provided blend and run the script in the editor - Observe that the 2 models referenced in the screenshot below show some degenerate/collapsed geometry - The 2 models are "CornellBox-Original.obj" and "CornellBox-Mirror.obj" - There's a few other models that are missing their right-side walls as well Note: Consider using the filename for the imported object name instead of "New object" if no other name is provided. ![obj-bad-geo.png](https://archive.blender.org/developer/F13007203/obj-bad-geo.png) This caused by `tabs` as delimiters in some occasions. For example `CornellBox-Original.obj`: new importer chokes on: ``` ## Object rightwall v 1.00 0.00 -1.04 v 1.00 0.00 0.99 v 1.00 1.99 0.99 v 1.00 1.99 -1.04 ``` this would read in fine ``` ## Object rightwall v 1.00 0.00 -1.04 v 1.00 0.00 0.99 v 1.00 1.99 0.99 v 1.
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Added subscriber: @aras_p

Added subscriber: @aras_p
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Aras Pranckevicius self-assigned this 2022-04-19 19:50:52 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This caused by tabs as delimiters in some occasions.
For example CornellBox-Original.obj:
new importer chokes on:

## Object rightwall 
v	1.00  0.00  -1.04   
v	1.00  0.00   0.99
v	1.00  1.99   0.99
v	1.00  1.99  -1.04

this would read in fine

## Object rightwall 
v 1.00  0.00  -1.04   
v 1.00  0.00   0.99
v 1.00  1.99   0.99
v 1.00  1.99  -1.04

I could not find anything in the specification(s) that clearly say which delimiters to use, but I do think this is a regression (not sure how many applications are out there writing with tabs).
Will mark regression with high prio.

This caused by `tabs` as delimiters in some occasions. For example `CornellBox-Original.obj`: new importer chokes on: ``` ## Object rightwall v 1.00 0.00 -1.04 v 1.00 0.00 0.99 v 1.00 1.99 0.99 v 1.00 1.99 -1.04 ``` this would read in fine ``` ## Object rightwall v 1.00 0.00 -1.04 v 1.00 0.00 0.99 v 1.00 1.99 0.99 v 1.00 1.99 -1.04 ``` I could not find anything in the specification(s) that clearly say which delimiters to use, but I do think this is a regression (not sure how many applications are out there writing with tabs). Will mark regression with high prio.
Philipp Oeser changed title from New OBJ importer fails to load some geometry from older files to Regression: new OBJ importer fails to load geometry using TAB character as delimiter 2022-04-26 14:37:59 +02:00

This issue was referenced by 33518f9da1

This issue was referenced by 33518f9da160cf2d9e91dd7a69cd5788303dcca4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97417
No description provided.